Implementation of the structure
- Config
- Api client bridge pattern
- Correction of the documentation in accordance with the development
- Cleaning

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,7 +12,7 @@
          bootstrap="Tests/bootstrap.php"
 >
     <testsuites>
-        <testsuite name="DaDiBundle Test Suite">
+        <testsuite name="DaApiClientBundle Test Suite">
             <directory>./Tests/</directory>
         </testsuite>
     </testsuites>
