--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -12,7 +12,7 @@ services:
 
     da_api_client.api_implementor:
         class:     %da_api_client.api_implementor.class%
-        arguments: [@da_api_client.rest_logger]
+        arguments: [@da_api_client.rest_logger, @security.context]
         abstract:  true
         public:    false
 
