Adding authorization refresher mechanism

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,8 +1,9 @@
 parameters:
-    da_api_client.api.class:             Da\ApiClientBundle\HttpClient\RestApiClientBridge
-    da_api_client.api_implementor.class: Da\ApiClientBundle\HttpClient\RestApiClientBasicImplementor
-    da_api_client.rest_logger.class:     Da\ApiClientBundle\Logging\DebugStack
-    da_api_client.data_collector.class:  Da\ApiClientBundle\DataCollector\RestApiClientDataCollector
+    da_api_client.api.class:                      Da\ApiClientBundle\HttpClient\RestApiClientBridge
+    da_api_client.api_implementor.class:          Da\ApiClientBundle\HttpClient\RestApiClientBasicImplementor
+    da_api_client.rest_logger.class:              Da\ApiClientBundle\Logging\DebugStack
+    da_api_client.data_collector.class:           Da\ApiClientBundle\DataCollector\RestApiClientDataCollector
+    da_api_client.event.exception_listener.class: Da\ApiClientBundle\Event\ExceptionListener
 
 services:
     da_api_client.api:
@@ -12,7 +13,7 @@ services:
 
     da_api_client.api_implementor:
         class:     %da_api_client.api_implementor.class%
-        arguments: [@da_api_client.rest_logger, @service_container]
+        arguments: [@da_api_client.rest_logger, @service_container, null]
         abstract:  true
         public:    false
 
@@ -25,6 +26,9 @@ services:
         arguments: [@da_api_client.rest_logger]
         public:    false
         tags:
-            - { name: data_collector, template: "DaApiClientBundle:Collector:rest", id: "rest_api" }
+            - { name: data_collector, template: 'DaApiClientBundle:Collector:rest', id: rest_api }
 
-
+    da_api_client.event.exception_listener:
+        class: %da_api_client.event.exception_listener.class%
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
