--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/dependency-injection" : ">=2.1,<2.4",
-        "symfony/config" : ">=2.1,<2.4"
+        "symfony/config" : ">=2.1,<2.4",
+        "da/auth-common-bundle": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
