--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,7 +1,7 @@
 parameters:
-    da_api_client.api.class:                      Da\ApiClientBundle\HttpClient\RestApiClientBridge
-    da_api_client.api_implementor.class:          Da\ApiClientBundle\HttpClient\RestApiClientBasicImplementor
-    da_api_client.rest_logger.class:              Da\ApiClientBundle\Logging\DebugStack
+    da_api_client.api.class:                      Da\ApiClientBundle\Http\ApiClient\RestApiClientBridge
+    da_api_client.api_implementor.class:          Da\ApiClientBundle\Http\ApiClient\RestApiClientBasicImplementor
+    da_api_client.rest_logger.class:              Da\ApiClientBundle\Http\Logger\DebugStack
     da_api_client.data_collector.class:           Da\ApiClientBundle\DataCollector\RestApiClientDataCollector
 
 services:
