--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,8 +1,8 @@
 parameters:
-    da_api_client.api.class:                      Da\ApiClientBundle\Http\ApiClient\RestApiClientBridge
-    da_api_client.api_implementor.class:          Da\ApiClientBundle\Http\ApiClient\RestApiClientBasicImplementor
-    da_api_client.rest_logger.class:              Da\ApiClientBundle\Http\Logger\DebugStack
-    da_api_client.data_collector.class:           Da\ApiClientBundle\DataCollector\RestApiClientDataCollector
+    da_api_client.api.class:                      Da\ApiClientBundle\Http\Rest\RestApiClientBridge
+    da_api_client.api_implementor.class:          Da\ApiClientBundle\Http\Rest\RestApiClientBasicImplementor
+    da_api_client.http_logger.class:              Da\ApiClientBundle\Logger\HttpDebugStack
+    da_api_client.data_collector.class:           Da\ApiClientBundle\DataCollector\ApiClientDataCollector
 
 services:
     da_api_client.api:
@@ -16,13 +16,13 @@ services:
         abstract:  true
         public:    false
 
-    da_api_client.rest_logger:
-        class:     %da_api_client.rest_logger.class%
+    da_api_client.http_logger:
+        class:     %da_api_client.http_logger.class%
         public:    false
 
     da_api_client.data_collector:
         class:     %da_api_client.data_collector.class%
-        arguments: [@da_api_client.rest_logger]
+        arguments: [@da_api_client.http_logger]
         public:    false
         tags:
-            - { name: data_collector, template: 'DaApiClientBundle:Collector:rest', id: rest_api }
+            - { name: data_collector, template: 'DaApiClientBundle:Collector:api', id: api }
