--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -18,6 +18,8 @@ services:
 
     da_api_client.http_logger:
         class:     %da_api_client.http_logger.class%
+        arguments: [@logger]
+        public:    false
 
     da_api_client.data_collector:
         class:     %da_api_client.data_collector.class%
