--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "email": "tprelot@gmail.com"
         },
         {
-            "name": "Gabriel Donbaz",
+            "name": "Gabriel Bondaz",
             "email": "gabriel.bondaz@gmail.com"
         }
     ],
@@ -19,7 +19,8 @@
         "php": ">=5.3.3",
         "symfony/dependency-injection" : ">=2.1,<2.4",
         "symfony/config" : ">=2.1,<2.4",
-        "da/auth-common-bundle": "dev-master"
+        "da/auth-common-bundle": "dev-master",
+        "doctrine/doctrine-cache-bundle": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
