--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -18,7 +18,7 @@ services:
 
     da_api_client.http_logger:
         class:     %da_api_client.http_logger.class%
-        arguments: [@logger, @debug.stopwatch]
+        arguments: [@service_container]
         public:    false
 
     da_api_client.data_collector:
