--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "symfony/dependency-injection" : ">=2.1,<2.4",
-        "symfony/config" : ">=2.1,<2.4",
+        "symfony/dependency-injection" : ">=2.1",
+        "symfony/config" : ">=2.1",
         "da/auth-common-bundle": "dev-master",
         "doctrine/doctrine-cache-bundle": "~1.0"
     },
