--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -12,18 +12,18 @@ services:
 
     da_api_client.api_implementor:
         class:     %da_api_client.api_implementor.class%
-        arguments: [@service_container]
+        arguments: ['@service_container']
         abstract:  true
         public:    false
 
     da_api_client.http_logger:
         class:     %da_api_client.http_logger.class%
-        arguments: [@service_container]
+        arguments: ['@service_container']
         public:    false
 
     da_api_client.data_collector:
         class:     %da_api_client.data_collector.class%
-        arguments: [@da_api_client.http_logger]
+        arguments: ['@da_api_client.http_logger']
         public:    false
         tags:
             - { name: data_collector, template: 'DaApiClientBundle:Collector:api', id: api }
